# nuzzle

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
src/: app.rs  config.rs  event.rs  highlight.rs  main.rs  markdown.rs  types.rs
src/ai/: client.rs  digest.rs  embedding.rs  mod.rs  qa.rs  summarizer.rs  tools.rs
src/db/: repository.rs  schema.rs
src/feed/: fetcher.rs  manager.rs  mod.rs  parser.rs
src/search/: index.rs  mod.rs  query.rs
src/tools/: executor.rs  mod.rs  protocol.rs  registry.rs
src/tui/: animations.rs  layout.rs  mod.rs  widgets.rs
tools/builtin/: add_feed.sh  deep_research.sh  exec.sh  fetch_page.sh  list_files.sh  list_sessions.sh  read_article.sh  read_file.sh  read_session.sh  search_news.sh  search_sessions.sh  web_search.sh  write_file.sh
