[package]
name = "nuzzle"
version = "0.1.0"
edition = "2021"
description = "Snuggle up to your feeds with AI – an AI-native terminal RSS reader"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
feed-rs = "2.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"
tui-textarea = "0.7"
futures = "0.3"
bytes = "1"
regex = "1"
shlex = "1"
